fix: overflow hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,8 @@
 
 * {
   overscroll-behavior: none;
+}
+:root {
   overflow: hidden;
 }
 
